code_server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: code-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: code-server-service
          servicePort: 80

      - path: /code-server/echo
        backend:
          serviceName: echo-service
          servicePort: 5678


---
apiVersion: v1
kind: Service
metadata:
 name: code-server-service
 namespace: code-server
spec:
 ports:
 - port: 80
   targetPort: 8080
 selector:
   app: code-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: codercom/code-server:latest
        imagePullPolicy: Always
        name: code-server
        ports:
          - containerPort: 8080

---
#
# Demonstration echo service
#

kind: Pod
apiVersion: v1
metadata:
  name: echo-app
  namespace: code-server
  labels:
    app: echo
spec:
  containers:
    - name: echo-app
      image: hashicorp/http-echo
      args:
        - "-text=code-server"

---

kind: Service
apiVersion: v1
metadata:
  name: echo-service
  namespace: code-server
spec:
  selector:
    app: echo
  ports:
    - port: 5678 # Default port for image
