ingress_istio_demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-demo
  labels:
    istio-injection: enabled

---

kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: istio-demo
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: istio-demo
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
      name: http

---

kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: istio-demo
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"

---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: istio-demo
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
      name: http

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-gateway
  namespace: istio-demo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-apple-vs
  namespace: istio-demo
spec:
  gateways:
  - example-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /apple
    rewrite:
      uri: /
    route:
    - destination:
        host: apple-service
        port:
          number: 5678
    timeout: 300s

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-banana-vs
  namespace: istio-demo
spec:
  gateways:
  - example-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /banana
    rewrite:
      uri: /
    route:
    - destination:
        host: banana-service
        port:
          number: 5678
    timeout: 300s
